--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         var _currentPiece;
         var _currentDropPiece;  
         var _mouse;
-		var pilt = ["Isik.jpg", "isik2.bmp", "tookogemus.jpg", "prog.jpg", "muu.jpg"];
+		var pilt = ["Isik.jpg", "haridus.jpg", "tookogemus.jpg", "prog.jpg", "muu.jpg"];
         function init(i){
             
             _img.addEventListener('load',onImage,false);
