--- a/index.html
+++ b/index.html
@@ -234,15 +234,16 @@
 		<button type="button" onclick="init(2)">Töökogemus</button>
 		<button type="button" onclick="init(3)">Programmeerimis keeled</button>
 		<button type="button" onclick="init(4)">Lisaks</button>
-		
 	</div>
 	
+    <div>	
     <canvas id="canvas"width="400" height="400" style="border:1px solid #d3d3d3;">
 			Your browser does not support the HTML5 canvas tag.</canvas>
 	<div id="osad">
 	<button id="lahendus" type="button" onclick="gameOver()">Lahenda puzzle!</button>
 	<p>Puzzle algne kood on pärit Brad Manderscheid <a href="http://code.tutsplus.com/tutorials/create-an-html5-canvas-tile-swapping-puzzle--active-10747" target="_blank">tutorialist</a>.</p>
 	</div>
+    </div>
 	<div id="jalus">
             <p>E-post: maarja.jamsa@gmail.com Mob: 53422219</p>
         </div>
